--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-to-print": "^2.14.15",
     "react-transition-group": "^4.4.5",
     "uuid": "^9.0.1"
   },
