--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals": "^1.2.1",
+    "@preact/signals-react": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.14.15",
